# sec-edgar-mcp

./: .env.example  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  KNOWN_ISSUES.md  README.md  README_zh.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_report.md
.github/workflows/: codeql.yml  test.yml
docs/: REGISTER.md  RELEASE.md  SECURITY.md  THREAT_MODEL.md
scripts/: ensure-uv-lock-tracked.sh  fetch_form4_corpus.py  local-ci.sh
src/sec_edgar_mcp/: __init__.py  __main__.py  _platform.py  _proxy.py  _thirteenf.py  _ua_probe.py  _xbrl.py  cache.py  cache_backend.py  client.py  errors.py  models.py  server.py
src/sec_edgar_mcp/tools/: __init__.py  _runtime.py  filings.py  insider.py  meta.py  proxy.py  search.py  thirteenf.py
tests/: conftest.py  test_boundary.py  test_cache.py  test_cache_backend.py  test_client.py  test_coverage_completion.py  test_errors.py  test_exception.py  test_meta_ua_field.py  test_models.py  test_owasp_2017.py  test_owasp_2021.py  test_owasp_2025.py  test_pentest.py  test_platform.py  test_proxy_parser.py  test_security_thirteenf_proxy.py  test_server_integration.py  test_thirteenf_parser.py  test_thirteenf_proxy_helpers.py  test_thirteenf_proxy_tools.py  test_tools_unit.py  test_ua_probe.py  test_xbrl.py  test_xbrl_fuzz.py  test_xbrl_real_corpus.py
tests/fixtures/form4_real_corpus/: 0000021344-26-000122.xml  0000021344-26-000137.xml  0000021344-26-000139.xml  0000021344-26-000142.xml  0000034088-26-000075.xml  0000070858-26-000319.xml  0000070858-26-000320.xml  0000070858-26-000321.xml  0000070858-26-000322.xml  0000093410-26-000105.xml  0000093410-26-000117.xml  0000093410-26-000119.xml  0000093410-26-000121.xml  0000200406-26-000108.xml  0000200406-26-000111.xml  0000200406-26-000113.xml  0000200406-26-000115.xml  0000789019-26-000064.xml  0000789019-26-000066.xml  0000789019-26-000070.xml  0000789019-26-000075.xml  0000796343-26-000097.xml  0000796343-26-000103.xml  0000796343-26-000105.xml  0000796343-26-000107.xml  0000950103-26-007491.xml  0000950103-26-007492.xml  0000950103-26-007493.xml  0000950103-26-007496.xml  0001018724-26-000020.xml  0001046179-26-000285.xml  0001046179-26-000286.xml  0001046179-26-000288.xml  0001046179-26-000290.xml  0001104659-26-047678.xml  0001104659-26-055079.xml  0001104659-26-062860.xml  0001140361-26-015421.xml  0001140361-26-017175.xml  0001140361-26-020298.xml  (+31 more)
tests/fixtures/seed/: aapl_10k.htm  company_tickers.json  def14a_apple.htm  form13f_info_table.xml  form4_aapl.xml  form4_msft_gift.xml  index_13f.json  index_aapl_10k.json  search_13f_holders.json  search_cybersecurity.json  submissions_13f_manager.json  submissions_aapl.json  submissions_proxy.json
