[project]
name = "sec-edgar-mcp"
version = "0.3.0"
description = "Read-only MCP server for SEC EDGAR public API (filings, Form 4, full-text search)."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "kevinkda" }]
keywords = ["mcp", "sec", "edgar", "filings", "form-4", "finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "mcp>=1.6,<2.0",
    "httpx>=0.28.1,<0.29",
    "pydantic>=2.6,<3",
    "python-dotenv>=1.0,<2",
    "defusedxml>=0.7.1,<0.8",
]

[project.optional-dependencies]
clickhouse = ["clickhouse-connect>=0.7,<1"]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=0.23,<2",
    "pytest-cov>=5.0,<8",
    "respx>=0.22.0,<0.24",
    "ruff>=0.6,<1",
    "mypy>=1.10,<2",
    "bandit>=1.7,<2",
    # pip is a build-time tool (not a runtime import); pinned to >=26.1.2 to
    # clear PYSEC-2026-196 in the pip-audit CI gate. uv seeds pip into the
    # venv, so pip-audit scans it even though nothing imports pip at runtime.
    "pip>=26.1.2",
    "pip-audit>=2.7,<3",
    "pre-commit>=3.7,<5",
    "detect-secrets>=1.5,<2",
    "hypothesis>=6.130,<7",
]

[project.scripts]
sec-edgar-mcp = "sec_edgar_mcp.server:main"

[project.urls]
Homepage = "https://github.com/kevinkda/sec-edgar-mcp"
Issues = "https://github.com/kevinkda/sec-edgar-mcp/issues"

[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sec_edgar_mcp"]

[tool.uv]
default-groups = []

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "9.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src/sec_edgar_mcp",
    "--cov-report=term-missing",
    "--cov-report=html",
]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "posix_only: test depends on POSIX file-permission semantics; skipped on Windows.",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:httpx.*",
]

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
branch = true
source = ["src/sec_edgar_mcp"]
omit = [
    "src/sec_edgar_mcp/__main__.py",
]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "pragma: no cover",
    "@(abc\\.)?abstractmethod",
]
fail_under = 100
show_missing = true
skip_covered = false

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]
exclude = ["build", "dist", ".venv", "htmlcov"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP", "SIM", "S",
    "RUF", "PL", "PIE", "PT", "RET", "TID", "ASYNC",
]
ignore = [
    "E501",
    "PLR0913",
    "PLR2004",
    "S101",
    "TID252",
    "PLC0415",
    "PT011",
    "B017",
    "PT006",
    "RET504",
    "S311",
    "PLW0603",
    "RUF012",
    "RUF059",
    "ASYNC240",
    "SIM105",
    "SIM117",
    "PT018",
    "PT019",
    "PLR0911",
    "PLR0915",
    "PLW0108",
    "S108",
    "S103",
    "S603",
    "S105",
    "UP042",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "PLR2004", "PLR0913"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_unreachable = true
pretty = true
show_error_codes = true
exclude = ["build/", "dist/", ".venv/", "htmlcov/"]

[[tool.mypy.overrides]]
module = ["mcp.*", "defusedxml.*", "clickhouse_connect.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# bandit
# ---------------------------------------------------------------------------
[tool.bandit]
exclude_dirs = ["tests", "build", ".venv"]
skips = ["B101"]
